clusters/talos-ottawa/apps/media/app/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: sctx/overseerr:latest
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: overseerr-config
