clusters/talos-ottawa/apps/media/app/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  selector:
    app: overseerr
  ports:
  - name: http
    port: 5055
    protocol: TCP
    targetPort: 5055
  type: ClusterIP
