clusters/talos-ottawa/apps/media/app/overseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "overseerr"
    item.homer.rajsingh.info/subtitle: "Media Request Manager"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/overseerr.svg"
    item.homer.rajsingh.info/keywords: "requests, media, jellyfin"
    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
  hostnames:
    - "overseerr.${COMMON_DOMAIN}"
    - "overseerr.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: overseerr
          port: 5055
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
